made minor changes to the index. Got the review page to display the text alongside the images and collapse correctly.

--- a/public_html/css/custom.css
+++ b/public_html/css/custom.css
@@ -3,7 +3,19 @@
   padding-top: 50px;
 }
 
-img {
+.logo {
 	display: block;
 	margin: auto;
+}
+
+img {
+	display: block;
+	margin: left;
+}
+
+h2 {
+	display: block;
+	text-align: center;
+	padding: 15px;
+	color: orange;
 }
